tests/baselines/reference/esbuildInterop(defaultismoduleexports=auto).errors.txt
/index.ts(3,5): error TS2339: Property 'default' does not exist on type 'string'.


==== /node_modules/dep/package.json (0 errors) ====
    {
        "name": "dep",
        "version": "1.0.0",
        "main": "index.js"
    }
    
==== /node_modules/dep/index.d.ts (0 errors) ====
    declare const _default: string;
    export default _default;
    
==== /package.json (0 errors) ====
    {
      "type": "module"
    }
    
==== /index.ts (1 errors) ====
    import dep from "dep";
    dep.toLowerCase(); // Error in nodenext
    dep.default.toLowerCase(); // Error in auto
        ~~~~~~~
!!! error TS2339: Property 'default' does not exist on type 'string'.
    